SERVER-34902 disallow $out in view pipeline