src/mongo/db/views/view_catalog.cpp
@@ -267,10 +267,23 @@ StatusWith<stdx::unordered_set<NamespaceString>> ViewCatalog::_validatePipeline_
     }
 
     // Validate that the view pipeline does not contain any ineligible stages.
-    auto sources = pipelineStatus.getValue()->getSources();
-    if (!sources.empty() && sources.front()->constraints().isChangeStreamStage()) {
-        return {ErrorCodes::OptionNotSupportedOnView,
-                "$changeStream cannot be used in a view definition"};
+    const auto& sources = pipelineStatus.getValue()->getSources();
+    if (!sources.empty()) {
+        const auto firstPersistentStage =
+            std::find_if(sources.begin(), sources.end(), [](const auto& source) {
+                return source->constraints().writesPersistentData();
+            });
+        if (sources.front()->constraints().isChangeStreamStage()) {
+            return {ErrorCodes::OptionNotSupportedOnView,
+                    "$changeStream cannot be used in a view definition"};
+        } else if (firstPersistentStage != sources.end()) {
+            mongo::StringBuilder errorMessage;
+            errorMessage << "The aggregation stage " << firstPersistentStage->get()->getSourceName()
+                         << " in location " << std::distance(sources.begin(), firstPersistentStage)
+                         << " of the pipeline cannot be used in the view definition of "
+                         << viewDef.name().ns() << " because it writes to disk";
+            return {ErrorCodes::OptionNotSupportedOnView, errorMessage.str()};
+        }
     }
 
     return std::move(involvedNamespaces);
