jstests/core/views/views_creation.js
@@ -6,7 +6,9 @@
     // For arrayEq.
     load("jstests/aggregation/extras/utils.js");
 
-    let viewsDB = db.getSiblingDB("views_creation");
+    const viewsDBName = "views_creation";
+
+    let viewsDB = db.getSiblingDB(viewsDBName);
     assert.commandWorked(viewsDB.dropDatabase());
 
     let collNames = viewsDB.getCollectionNames();
@@ -83,4 +85,23 @@
     assert.commandFailedWithCode(
         viewsDB.runCommand({create: "dollar$", viewOn: "collection", pipeline: pipe}),
         ErrorCodes.InvalidNamespace);
+    assert.commandFailedWithCode(viewsDB.runCommand({
+        create: "viewWithBadPipeline",
+        viewOn: "collection",
+        pipeline: [{$project: {_id: false}}, {$out: "notExistingCollection"}]
+    }),
+                                 ErrorCodes.OptionNotSupportedOnView);
+
+    // These test that, when an existing view in system.views is invalid because of a $out in the
+    // pipeline, the database errors on creation of a new view.
+    assert.commandWorked(viewsDB.system.views.insert({
+        _id: `${viewsDBName}.invalidView`,
+        viewOn: "collection",
+        pipeline: [{$project: {_id: false}}, {$out: "notExistingCollection"}]
+    }));
+    assert.commandFailedWithCode(
+        viewsDB.runCommand({create: "viewWithBadViewCatalog", viewOn: "collection", pipeline: []}),
+        ErrorCodes.OptionNotSupportedOnView);
+    assert.commandWorked(
+        viewsDB.system.views.remove({_id: `${viewsDBName}.invalidView`}, {justOne: true}));
 }());
